--- a/package.json
+++ b/package.json
@@ -9,11 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^5.0.0",
+    "bcryptjs": "^2.4.3",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
+    "jsonwebtoken": "^9.0.1",
     "next": "13.4.9",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sass": "^1.63.6"
+  },
+  "devDependencies": {
+    "prisma": "^5.0.0"
   }
 }
