--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "eslint-config-next": "13.4.9",
     "jsonwebtoken": "^9.0.1",
     "next": "13.4.9",
+    "next-auth": "^4.22.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sass": "^1.63.6"
