Started working on CRM

--- a/.env
+++ b/.env
@@ -5,7 +5,9 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mysql://root:@localhost:3306/megatrans"
-JWT_SECRET="secret"
+NEXTAUTH_SECRET="secret"
+NEXTAUTH_URL="http://localhost:3000"
 JWT_EXPIRE="1d"
 NODE_ENV="development"
+
 
