--- a/.env
+++ b/.env
@@ -7,7 +7,10 @@
 DATABASE_URL="mysql://root:@localhost:3306/megatrans"
 NEXTAUTH_SECRET="secret"
 NEXTAUTH_URL="http://localhost:3000"
+
+JWT_SECRET="niePokazujNikomu"
 JWT_EXPIRE="1d"
+
 NODE_ENV="development"
 
 
