--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bcryptjs": "^2.4.3",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
+    "html2pdf.js": "^0.10.1",
     "jsonwebtoken": "^9.0.1",
     "next": "13.4.9",
     "next-auth": "^4.22.1",
