--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "bcryptjs": "^2.4.3",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
-    "html2pdf.js": "^0.10.1",
+    "html-to-image": "^1.11.11",
     "jsonwebtoken": "^9.0.1",
+    "jspdf": "^2.5.1",
     "next": "13.4.9",
     "next-auth": "^4.22.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-qr-code": "^2.0.11",
     "sass": "^1.63.6",
     "uuid": "^9.0.0"
   },
