--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bcryptjs": "^2.4.3",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
+    "excel4node": "^1.8.2",
     "html-to-image": "^1.11.11",
     "jsonwebtoken": "^9.0.1",
     "jspdf": "^2.5.1",
