--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "bcryptjs": "^2.4.3",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
-    "excel4node": "^1.8.2",
+    "file-saver": "^2.0.5",
     "html-to-image": "^1.11.11",
     "jsonwebtoken": "^9.0.1",
     "jspdf": "^2.5.1",
@@ -24,6 +24,7 @@
     "react-dom": "18.2.0",
     "react-qr-code": "^2.0.11",
     "sass": "^1.63.6",
+    "sheetjs-style": "^0.15.8",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
