--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-qr-code": "^2.0.11",
     "sass": "^1.63.6",
     "sheetjs-style": "^0.15.8",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "xlsx": "https://cdn.sheetjs.com/xlsx-0.19.3/xlsx-0.19.3.tgz"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.0.2",
