--- a/package.json
+++ b/package.json
@@ -7,7 +7,13 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate",
+    "dockerStart": "docker-compose up",
+    "dockerBuild": "docker-compose build",
+    "dockerStop": "docker-compose down",
+    "dockerClean": "docker system prune -af",
+    "clean:volumes": "docker volume prune -f",
+    "seed": "docker exec -it prisma npm run seed"
   },
   "dependencies": {
     "@prisma/client": "^5.0.0",
