--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "dev": "next dev -p 3000",
+    "start": "next start -p 81",
+    "dev:prod": "npx prisma migrate deploy && npm run dev",
     "start:migrate:prod": "npx prisma migrate deploy && npm run start",
     "lint": "next lint"
   },
