--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "build": "next build",
-    "dev": "next dev",
+    "dev": "next dev -p 80",
     "start": "next start -p 80",
     "dev:prod": "npx prisma migrate deploy && npm run dev",
     "start:migrate:prod": "npx prisma migrate deploy && npm run start",
