--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "react-dom": "18.2.0",
     "react-qr-code": "^2.0.11",
     "sass": "^1.63.6",
+    "sharp": "^0.32.4",
     "sheetjs-style": "^0.15.8",
     "uuid": "^9.0.0",
+    "validator": "^13.9.0",
     "xlsx": "https://cdn.sheetjs.com/xlsx-0.19.3/xlsx-0.19.3.tgz"
   },
   "devDependencies": {
