--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jspdf": "^2.5.1",
     "next": "13.4.9",
     "next-auth": "^4.22.1",
+    "nodemailer": "^6.9.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-qr-code": "^2.0.11",
