--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "next dev -p 80",
     "start": "next start -p 80",
     "dev:prod": "npx prisma migrate deploy && npm run dev",
-    "start:migrate:prod": "npx prisma migrate deploy && npm run start",
+    "start:prod": "npx prisma migrate deploy && npm run start",
     "lint": "next lint"
   },
   "dependencies": {
