--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eslint-config-next": "13.4.9",
     "file-saver": "^2.0.5",
     "html-to-image": "^1.11.11",
+    "html-to-react": "^1.6.0",
     "jsonwebtoken": "^9.0.1",
     "jspdf": "^2.5.1",
     "next": "13.4.9",
