Improved instruction and Docker File

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "build": "next build",
-    "dev": "next dev -p 80",
+    "dev": "next dev",
     "start": "next start -p 80",
     "dev:prod": "npx prisma migrate deploy && npm run dev",
     "start:prod": "npx prisma migrate deploy && npm run start",
@@ -13,23 +13,23 @@
   "dependencies": {
     "@prisma/client": "^5.1.0",
     "bcryptjs": "^2.4.3",
-    "eslint": "8.44.0",
-    "eslint-config-next": "13.4.9",
+    "eslint": "^9.1.1",
+    "eslint-config-next": "^14.2.3",
     "file-saver": "^2.0.5",
     "html-to-image": "^1.11.11",
     "html-to-react": "^1.6.0",
     "jsonwebtoken": "^9.0.1",
     "jspdf": "^2.5.1",
-    "next": "13.4.9",
+    "next": "^14.2.3",
     "next-auth": "^4.22.1",
     "nodemailer": "^6.9.4",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-intersection-observer": "^9.5.2",
     "react-qr-code": "^2.0.11",
     "react-query": "^3.39.3",
     "sass": "^1.63.6",
-    "sharp": "^0.32.4",
+    "sharp": "^0.33.3",
     "sheetjs-style": "^0.15.8",
     "uuid": "^9.0.0",
     "validator": "^13.9.0",
