--- a/docker/docker-compose.dev.yml
+++ b/docker/docker-compose.dev.yml
@@ -24,6 +24,11 @@ services:
       PMA_HOST: megatrans-mysql-dev
       PMA_USER: root
       PMA_PASSWORD: megatrans
+      UPLOAD_LIMIT: 100M
+      MAX_EXECUTION_TIME: 300
+      MEMORY_LIMIT: 512M
+      POST_MAX_SIZE: 100M
+      UPLOAD_MAX_FILESIZE: 100M
     depends_on:
       - megatrans-mysql-dev
     networks:
