--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.13.0",
+    "@tanstack/react-query": "^5.84.0",
     "bcryptjs": "^3.0.2",
     "eslint": "^9.32.0",
     "eslint-config-next": "^15.4.5",
@@ -23,12 +24,11 @@
     "jspdf": "^3.0.1",
     "next": "^15.4.5",
     "next-auth": "^4.24.11",
-    "nodemailer": "^7.0.5",
+    "nodemailer": "^6.10.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-intersection-observer": "^9.16.0",
     "react-qr-code": "^2.0.18",
-    "react-query": "^3.39.3",
     "sass": "^1.89.2",
     "sharp": "^0.34.3",
     "sheetjs-style": "^0.15.8",
@@ -38,7 +38,11 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^9.9.0",
-    "prisma": "^6.13.0"
+    "@types/node": "^24.1.0",
+    "@types/react": "^19.1.9",
+    "@types/react-dom": "^19.1.7",
+    "prisma": "^6.13.0",
+    "typescript": "^5.8.3"
   },
   "prisma": {
     "seed": "node prisma/seeders/seed.mjs"
