--- a/package.json
+++ b/package.json
@@ -38,9 +38,15 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^9.9.0",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/file-saver": "^2.0.7",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.1.0",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.7",
+    "@types/uuid": "^10.0.0",
+    "@types/validator": "^13.15.2",
     "prisma": "^6.13.0",
     "typescript": "^5.8.3"
   },
