--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "html-to-react": "^1.7.0",
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^3.0.1",
+    "lucide-react": "^0.536.0",
     "next": "^15.4.5",
     "next-auth": "^4.24.11",
     "nodemailer": "^6.10.1",
