--- a/package.json
+++ b/package.json
@@ -13,8 +13,12 @@
   },
   "dependencies": {
     "@prisma/client": "^6.13.0",
+    "@tailwindcss/postcss": "^4.1.11",
     "@tanstack/react-query": "^5.84.0",
+    "@tanstack/react-table": "^8.21.3",
     "bcryptjs": "^3.0.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "eslint": "^9.32.0",
     "eslint-config-next": "^15.4.5",
     "file-saver": "^2.0.5",
@@ -26,6 +30,7 @@
     "next": "^15.4.5",
     "next-auth": "^4.24.11",
     "nodemailer": "^6.10.1",
+    "postcss": "^8.5.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-intersection-observer": "^9.16.0",
@@ -33,6 +38,8 @@
     "sass": "^1.89.2",
     "sharp": "^0.34.3",
     "sheetjs-style": "^0.15.8",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss": "^4.1.11",
     "uuid": "^11.1.0",
     "validator": "^13.15.15",
     "xlsx": "https://cdn.sheetjs.com/xlsx-0.19.3/xlsx-0.19.3.tgz",
@@ -50,6 +57,7 @@
     "@types/uuid": "^10.0.0",
     "@types/validator": "^13.15.2",
     "prisma": "^6.13.0",
+    "tw-animate-css": "^1.3.6",
     "typescript": "^5.8.3"
   },
   "prisma": {
