UI for external API Keys + some bug fix

--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   },
   "dependencies": {
     "@prisma/client": "^6.13.0",
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-slot": "^1.2.3",
     "@tailwindcss/postcss": "^4.1.11",
     "@tanstack/react-query": "^5.84.0",
     "@tanstack/react-table": "^8.21.3",
@@ -29,6 +31,7 @@
     "lucide-react": "^0.536.0",
     "next": "^15.4.5",
     "next-auth": "^4.24.11",
+    "next-themes": "^0.4.6",
     "nodemailer": "^6.10.1",
     "postcss": "^8.5.6",
     "react": "^19.1.1",
@@ -38,6 +41,7 @@
     "sass": "^1.89.2",
     "sharp": "^0.34.3",
     "sheetjs-style": "^0.15.8",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11",
     "uuid": "^11.1.0",
