--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@prisma/client": "^6.13.0",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-slot": "^1.2.3",
+    "@scalar/api-reference-react": "^0.7.38",
+    "@scalar/nextjs-api-reference": "^0.8.14",
     "@tailwindcss/postcss": "^4.1.11",
     "@tanstack/react-query": "^5.84.0",
     "@tanstack/react-table": "^8.21.3",
@@ -60,6 +62,7 @@
     "@types/react-dom": "^19.1.7",
     "@types/uuid": "^10.0.0",
     "@types/validator": "^13.15.2",
+    "openapi-types": "^12.1.3",
     "prisma": "^6.13.0",
     "tw-animate-css": "^1.3.6",
     "typescript": "^5.8.3"
