--- a/package.json
+++ b/package.json
@@ -13,7 +13,13 @@
   },
   "dependencies": {
     "@prisma/client": "^6.13.0",
+    "@radix-ui/react-accordion": "^1.2.11",
+    "@radix-ui/react-collapsible": "^1.1.11",
     "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-popover": "^1.1.14",
+    "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slot": "^1.2.3",
     "@scalar/api-reference-react": "^0.7.38",
     "@scalar/nextjs-api-reference": "^0.8.14",
@@ -23,6 +29,8 @@
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
+    "dayjs": "^1.11.13",
     "eslint": "^9.32.0",
     "eslint-config-next": "^15.4.5",
     "file-saver": "^2.0.5",
@@ -37,6 +45,7 @@
     "nodemailer": "^6.10.1",
     "postcss": "^8.5.6",
     "react": "^19.1.1",
+    "react-day-picker": "^9.8.1",
     "react-dom": "^19.1.1",
     "react-intersection-observer": "^9.16.0",
     "react-qr-code": "^2.0.18",
