Prepare to prod deployment

--- a/docker/docker-compose.prod.yml
+++ b/docker/docker-compose.prod.yml
@@ -17,7 +17,7 @@ services:
     container_name: megatrans-app-prod
     restart: always
     depends_on:
-      - megatrans-mysql
+      - megatrans-mysql-prod
     build:
       context: ../
     env_file:
